added test cases + integrated notification service